<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baloons"
    tools:context="bopadomain.bopapackage.friendsfinder.MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="414dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="#0000BCD4"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="52sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="338dp"
        android:layout_marginEnd="15dp"
        android:text="@string/source"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="377dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:background="#B3FFEB3B"
        android:shadowColor="#00FFFFFF"
        android:text="@string/signin_button"
        android:textColor="#0A1866"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_password" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="376dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="#B3FFEB3B"
        android:fontFamily="sans-serif-medium"
        android:text="@string/register"
        android:textColor="#0A1866"
        android:textColorHighlight="#0A0A0A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_button" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <EditText
        android:id="@+id/signin_email"
        android:layout_width="362dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="password"
        android:background="#80BDF1F8"
        android:ems="10"
        android:hint="@string/sign_in_email"
        android:inputType="textEmailAddress"
        android:textColor="#0A1866"
        android:textColorHint="#3F51B5"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <EditText
        android:id="@+id/signin_password"
        android:layout_width="353dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="E-Mail address"
        android:background="#80BDF1F8"
        android:ems="10"
        android:hint="@string/sign_in_password"
        android:inputType="textPassword"
        android:textColor="#0A1866"
        android:textColorHint="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_email" />


</androidx.constraintlayout.widget.ConstraintLayout>
