<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fui_idp_button_background_phone"
    tools:context=".UserProfileActivity">
    <!--
    android:background="@drawable/baloons2"
    -->
    <TextView
        android:id="@+id/source2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="338dp"
        android:layout_marginEnd="15dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/my_profile_title"
        android:layout_width="414dp"
        android:layout_height="64dp"
        android:background="#0000BCD4"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/my_profile"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="52sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/users_list"
        android:layout_width="411dp"
        android:layout_height="441dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="110dp"
        android:layout_height="98dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/profile_picture"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[6]" />

    <Button
        android:id="@+id/signout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:text="@string/signout_button"
        app:layout_constraintEnd_toEndOf="@+id/my_profile_title"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go_to_map_button"
        android:layout_width="142dp"
        android:layout_height="63dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="124dp"
        android:text="@string/go_to_map_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/friends_list_title"
        android:layout_width="379dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/friends_list_title"
        android:textColor="#FFEB3B"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>